Fixed phone number placement on mobile

--- a/styles.css
+++ b/styles.css
@@ -545,6 +545,9 @@ font-weight: 300;
     position: relative;
     top: calc(-100px - 2.5em);
   }
+  .phone{
+    margin-top: 0;
+  }
   #topnav {
     z-index: 2;
       height: calc(100px + 2em);
